--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -27,5 +27,5 @@ jobs:
       run: | 
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          git remote set-url origin git@github.com:vincentchen743/personal-site.git
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/vincentchen743/personal-site.git
           npm run deploy
